--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -1010,3 +1010,13 @@ list-style: none;
 		margin: 8px 0 0;
 	}
 }
+
+.margin-vertical {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.margin-horizontal {
+	margin-right: 10px;
+	margin-left: 10px;
+}
