--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -38,6 +38,8 @@
   <li><a href="{% url 'Logout' %}">Logout</a></li>
   {% else %}
   <li><a href="{% url 'Login' %}">Login</a></li>
+  <li><a href="{% url 'RegisterStudent' %}">Register</a></li>
+
 {% endif %}
       </ul>
     </div>
