--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}" media="screen"> 
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
   <!-- CSS -->
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
-<!-- Default theme -->
-<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+  <!-- Default theme -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
   <title>{% block title %}{% endblock %}</title>
   {% block metaData %}{% endblock %}
 </head>
@@ -32,7 +32,7 @@
       <ul class="nav navbar-nav pull-right mainNav">
         <li class=""><a href="/">Home</a></li>
         <li><a href="{% url 'About' %}">About</a></li>
-        <li><a href="{% url 'About' %}">Courses</a></li>
+        <li><a href="{% url 'Courses' %}">Courses</a></li>
         <li><a href="{% url 'Contact' %}">Contact</a></li>
 {% if request.user.is_authenticated %}
   <li><a href="{% url 'Logout' %}">Logout</a></li>
