module detail page added

--- a/home/templates/courses_detail.html
+++ b/home/templates/courses_detail.html
@@ -27,7 +27,7 @@
                 <h1>Modules</h1>
                 <br>
                 {% for module in modules %}
-                <a href="{% url 'CourseDetail' course.id %}">
+                <a href="{% url 'ModuleDetail' module.id %}">
                     <div class="col-md-3 col-sm-6 col-xs-6">
                         <div class="team-member module_shadow_box">
                             <div class="member-img">
