--- a/home/templates/register.html
+++ b/home/templates/register.html
@@ -8,7 +8,7 @@
 
 <div class="container col-md-6 offset-md-3">
   <h1>Student Registration Form</h1>
-  <form method="POST" action="" >
+  <form method="POST" enctype="multipart/form-data" >
     {% csrf_token %}
     {{ form.as_p }}
      <br/>
