--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -23,34 +23,11 @@
 						Lorem Ipsum is inting and typesetting in simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the is dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 						</p>
 						
-						<form class="form-light mt-20" role="form">
-							<div class="form-group">
-								<label>Name</label>
-								<input type="text" class="form-control" placeholder="Your name">
-							</div>
-							<div class="row">
-								<div class="col-md-6">
-									<div class="form-group">
-										<label>Email</label>
-										<input type="email" class="form-control" placeholder="Email address">
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="form-group">
-										<label>Phone</label>
-										<input type="text" class="form-control" placeholder="Phone number">
-									</div>
-								</div>
-							</div>
-							<div class="form-group">
-								<label>Subject</label>
-								<input type="text" class="form-control" placeholder="Subject">
-							</div>
-							<div class="form-group">
-								<label>Message</label>
-								<textarea class="form-control" id="message" placeholder="Write you message here..." style="height:100px;"></textarea>
-							</div>
-							<button type="submit" class="btn btn-two">Send message</button><p><br/></p>
+						<form method="POST">
+							{% csrf_token %}
+							{{ form.as_p }}
+							 <br/>
+								<button type="submit" class="btn btn-primary">Submit</button>
 						</form>
 					</div>
 					<div class="col-md-4">
