--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"> 
 	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}" media="screen"> 
@@ -104,10 +103,10 @@
         <div class="col-md-6 panel">
           <div class="panel-body">
             <p class="simplenav">
-              <a href="index.html">Home</a> | 
-              <a href="about.html">About</a> |
-              <a href="courses.html">Courses</a> |
-              <a href="contact.html">Contact</a>
+              <a href="{% url 'Home' %}">Home</a> | 
+              <a href="{% url 'About' %}">About</a> |
+              <a href="{% url 'Courses' %}">Courses</a> |
+              <a href="{% url 'Contact' %}">Contact</a>
             </p>
           </div>
         </div>
