--- a/home/templates/student_profile.html
+++ b/home/templates/student_profile.html
@@ -44,9 +44,8 @@
     <div class="container">
         <div class="row">
             <h1>My Registrations</h1>
-            <br>
             {% if student_registrations.count == 0 %}
-                <h1>No Modules Registered</h1>
+                <h3 class="text-center">No Modules Registered</h3>
             {% endif %}
             {% for reg in student_registrations %}
                 <div class="col-md-3 col-sm-6 col-xs-6 text-center">
