update profile picture

--- a/home/templates/student_profile.html
+++ b/home/templates/student_profile.html
@@ -14,11 +14,18 @@
   <section class="team-content">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12 col-xs-12 module_shadow_box text-center" style="background-color: #3d84e6; height: 250px; color: white; display: flex; justify-content: center; align-items: center;">
+            <div class="col-md-6 col-sm-12 col-xs-12 module_shadow_box text-center" style="background-color: #3d84e6; height: 350px; color: white; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                 <img class="img-responsive" style="max-height: 200px;" src="../../{{ student.photo }}" alt="">
+                <form action="{% url 'UpdateProfilePicture' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{profilePictureForm.as_p}}
+                    <button class="btn btn-primary" type="submit"
+                    style="background-color: #000000;"
+                    >Update Profile Picture</button>
+                </form>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 module_shadow_box"
-             style="background-color: #000000; height: 250px; color: white;"
+             style="display: flex; flex-direction: column; justify-content: space-between; background-color: #000000; height: 350px; color: white;"
             >
             <h3 style="margin-top: 0; ">Name: {{student.user.first_name}} {{student.user.last_name}}</h3>
             <h3 style="margin-top: 0; ">Email: {{student.user.email}}</h3>
