fix: url issue for media

--- a/home/templates/module_detail.html
+++ b/home/templates/module_detail.html
@@ -127,7 +127,7 @@
                             {% endif %}
                             {% if student.photo != NULL %}
                                 <div class="member-img">
-                                    <img class="img-responsive" src="../../{{student.photo}}" alt="" style="width: 200px; height: 200px;">
+                                    <img class="img-responsive" src="https://task2studyportalsa.blob.core.windows.net/media/{{student.photo}}" alt="" style="width: 200px; height: 200px;">
                                 </div>
                             {% endif %}
                             <h1 class="text-center">{{ forloop.counter }}</h1>
