--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -9,7 +9,7 @@
  	<header id="head" class="secondary">
         <div class="container">
                 <h1>About Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p>
+                <p>Who Are We!</p>
         </div>
     </header>
     <!-- container -->
@@ -20,14 +20,14 @@
                 <h3>About Us</h3>
                 <p>
                     <img src="{% static 'images/about.jpg' %}" alt="" class="img-rounded pull-right" width="300">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.
+                    We are committed to fostering a dynamic and inclusive academic environment where students are empowered to achieve their full potential. Our university has grown into a leading institution known for its academic excellence, innovative research, and community engagement.
                 </p>
-                <p>Consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
+                <p>We embrace a global perspective, offering numerous opportunities for international study and collaboration. Our partnerships with universities around the world enable students to gain valuable cross-cultural experiences and prepare for careers in a globalized society.</p>
                 <h3>Our Achievements</h3>
                 <strong>2024</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
+                <p>Our university’s Business and Engineering programs have been consistently ranked among the top 10 in the nation, reflecting our commitment to academic excellence and innovative teaching. Faculty members have secured over $10 million in prestigious research grants from leading institutions such as the National Science Foundation and the National Institutes of Health, advancing groundbreaking research across various fields.</p>
                 <strong>2023</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
+                <p>Our graduates boast a 95% employment rate within six months of graduation, demonstrating the effectiveness of our career services and the high demand for our alumni in the job market. We have established over 50 academic partnerships with universities around the world, offering students unique opportunities for international study and collaborative research.</p>
                 </section>
             <!-- /main -->
 
@@ -37,16 +37,14 @@
                 <div class="panel">
                     <h4>Latest News</h4>
                     <ul class="list-unstyled list-spaces">
-                        <li><a href="">Responsive Design</a><br>
-                            <span class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</span></li>
-                        <li><a href="">HTML5, CSS3 and JavaScript</a><br>
-                            <span class="small text-muted">Consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam</span></li>
-                        <li><a href="">Bootstrap</a><br>
-                            <span class="small text-muted">Eveniet, consequuntur eius repellendus eos aliquid molestiae ea</span></li>
-                        <li><a href="">Clean Template</a><br>
-                            <span class="small text-muted">Sed, mollitia earum debitis est itaque esse reiciendis amet cupiditate.</span></li>
-                        <li><a href="">Premium Quality</a><br>
-                            <span class="small text-muted">Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</span></li>
+                        <li><a href="">1. Research Grant Awarded to Engineering Department</a><br>
+                            <span class="small text-muted">
+                                The Engineering Department has been awarded a $2 million research grant to develop sustainable energy solutions. This funding will support cutting-edge projects and provide opportunities for student involvement.
+                            </span></li>
+                        <li><a href="">2. New Library Hours Starting Next Semester</a><br>
+                            <span class="small text-muted">Starting next semester, the university library will extend its hours to accommodate students' study needs. The library will now be open from 7 AM to midnight, Monday through Friday.</span></li>
+                        <li><a href="">3. Alumni Association Hosts Annual Gala</a><br>
+                            <span class="small text-muted">The Alumni Association is excited to host its Annual Gala on June 15th. This event is a fantastic opportunity for alumni to reconnect, network, and celebrate their achievements. Tickets are available now.</span></li>
                     </ul>
                 </div>
 
@@ -73,10 +71,10 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-1.jpg" alt="">
+                            <img class="img-responsive" src="assets/images/profiles/Oo.jpeg" alt="">
                         </div>
                         <!-- Member Details -->
-                        <h4>Farhan</h4>
+                        <h4>Elizabeth Obiyomi</h4>
                         <!-- Designation -->
                         <span class="pos">Team Lead</span>
                         <div class="team-socials">
@@ -94,10 +92,10 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-2.jpg" alt="">
+                            <img class="img-responsive" src="assets/images/profiles/QF.jpeg" alt="">
                         </div>
                         <!-- Member Details -->
-                        <h4>Aqeel</h4>
+                        <h4>Quadri Faruk</h4>
                         <!-- Designation -->
                         <span class="pos">Developer</span>
                         <div class="team-socials">
@@ -115,10 +113,10 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-3.jpg" alt="">
+                            <img class="img-responsive" src="assets/images/profiles/Farhan..jpeg" alt="">
                         </div>
                         <!-- Member Details -->
-                        <h4>femioyeranmi03</h4>
+                        <h4>Farhan Arshad</h4>
                         <!-- Designation -->
                         <span class="pos">Developer</span>
                         <div class="team-socials">
@@ -136,10 +134,10 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-4.jpg" alt="">
+                            <img class="img-responsive" src="assets/images/profiles/Femi.jpeg" alt="">
                         </div>
                         <!-- Member Details -->
-                        <h4>ELIZAOLA</h4>
+                        <h4>Oluwafemi Oyeranmi</h4>
                         <!-- Designation -->
                         <span class="pos">Developer</span>
                         <div class="team-socials">
