--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -9,7 +9,7 @@
 		<header id="head" class="secondary">
 			<div class="container">
 				<h1>Contact Us</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing eliras scele!</p>
+				<p>Get in touch with us for more detailed information</p>
 			</div>
     </header>
 
@@ -20,7 +20,7 @@
 					<div class="col-md-8">
 						<h3 class="section-title">Your Message</h3>
 						<p>
-						Lorem Ipsum is inting and typesetting in simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the is dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+							We'd love to hear from you! Whether you have questions, feedback, or just want to say hello, please reach out to us. Our team is here to assist you.
 						</p>
 						
 						<form method="POST">
