--- a/home/templates/homePage.html
+++ b/home/templates/homePage.html
@@ -26,8 +26,6 @@
 								<img src="{% static 'images/1.png' %}" alt="" />
 							</div>
 							<h4>Online Courses</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
-							eset nec lacus elit dor broma.</p>
      						<p><a href="#"><em>Read More</em></a></p>
 						</div>
 					</div>
@@ -37,8 +35,6 @@
 								<img src="{% static 'images/2.png' %}" alt="" />
 							</div>
 							<h4>Meet our Staff</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
-							eset nec lacus elit dor broma.</p>
      						<p><a href="#"><em>Read More</em></a></p>
 						</div>
 					</div>
@@ -48,8 +44,7 @@
 								<img src="{% static 'images/3.png' %}" alt="" />
 							</div>
 							<h4>Latest Updates</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
-							eset nec lacus elit dor broma.</p>
+							
      						<p><a href="#"><em>Read More</em></a></p>
 						</div>
 					</div>
@@ -59,8 +54,7 @@
 								<img src="{% static 'images/4.png' %}" alt="" />
 							</div>
 							<h4>Placements</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus eleifend risus ut congue
-							eset nec lacus elit dor broma.</p>
+							
      						<p><a href="#"><em>Read More →</em></a></p>
 						</div>
 					</div>
@@ -98,9 +92,9 @@
       <section class="container">
       <div class="row">
       	<div class="col-md-8"><div class="title-box clearfix "><h2 class="title-box_primary">About Us</h2></div> 
-        <p><span>Perspiciatis unde omnis iste natus error sit voluptatem. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus musull dui.</span></p>
-        <p>Lorem ipsumulum aenean noummy endrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Null dui. Fusce feugiat malesuada odio.</p><p>Lorem ipsumulum aenean noummy endrerit mauris. Cum sociis natoque penatibus et magnis dis parturient montes ascetur ridiculus mus. Null dui. Fusce feugiat malesuada odio.</p>
-        <a href="#" title="read more" class="btn-inline " target="_self">read more</a> </div>
+        <p><span>We are committed to fostering a dynamic and inclusive academic environment where students are empowered to achieve their full potential. Our university has grown into a leading institution known for its academic excellence, innovative research, and community engagement.</span></p>
+        <p>We embrace a global perspective, offering numerous opportunities for international study and collaboration. Our partnerships with universities around the world enable students to gain valuable cross-cultural experiences and prepare for careers in a globalized society.</p>
+			</div>
               
           
           <div class="col-md-4"><div class="title-box clearfix "><h2 class="title-box_primary">Up Coming Courses</h2></div> 
