--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -59,7 +59,6 @@
             <div class="row">
                 <div class="col-md-12">
                     <h3>Our Team</h3>
-                    <p>Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</p>
                     <br />
                 </div>
             </div>
@@ -71,7 +70,7 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/profiles/Oo.jpeg" alt="">
+                            <img class="img-responsive" src="{% static 'images/profiles/Oo.jpeg' %}" alt="">
                         </div>
                         <!-- Member Details -->
                         <h4>Elizabeth Obiyomi</h4>
@@ -92,7 +91,7 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/profiles/QF.jpeg" alt="">
+                            <img class="img-responsive" src="{% static 'images/profiles/QF.jpeg' %}" alt="">
                         </div>
                         <!-- Member Details -->
                         <h4>Quadri Faruk</h4>
@@ -113,7 +112,7 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/profiles/Farhan..jpeg" alt="">
+                            <img class="img-responsive" src="{% static 'images/profiles/Farhan.jpeg' %}" alt="">
                         </div>
                         <!-- Member Details -->
                         <h4>Farhan Arshad</h4>
@@ -134,10 +133,31 @@
                         <!-- Image Hover Block -->
                         <div class="member-img">
                             <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/profiles/Femi.jpeg" alt="">
+                            <img class="img-responsive" src="{% static 'images/profiles/Femi.jpeg' %}" alt="">
                         </div>
                         <!-- Member Details -->
                         <h4>Oluwafemi Oyeranmi</h4>
+                        <!-- Designation -->
+                        <span class="pos">Developer</span>
+                        <div class="team-socials">
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-google-plus"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6">
+                    <!-- Team Member -->
+                    <div class="team-member pDark">
+                        <!-- Image Hover Block -->
+                        <div class="member-img">
+                            <!-- Image  -->
+                            <img class="img-responsive" src="{% static 'images/profiles/Aqeel.jpeg' %}" alt="">
+                        </div>
+                        <!-- Member Details -->
+                        <h4>Aqeel</h4>
                         <!-- Designation -->
                         <span class="pos">Developer</span>
                         <div class="team-socials">
