--- a/home/templates/courses.html
+++ b/home/templates/courses.html
@@ -8,7 +8,7 @@
 <header id="head" class="secondary">
     <div class="container">
             <h1>Courses</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto corporis,</p>
+            <p>List of All Courses</p>
     </div>
   </header>
     <!-- /container -->
