--- a/home/templates/master.html
+++ b/home/templates/master.html
@@ -23,8 +23,7 @@
       <!-- Button for smallest screens -->
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
       <a class="navbar-brand" style="margin: 0; padding: 0;" href="{% url 'Home' %}">
-        <!-- <img src="" alt="logo"></a> -->
-        <h1 style="color: black;">LOGO</h1>
+        <h1 style="color: black; margin-bottom: 20px;">SHUGroup6</h1>
       </a>
     </div>
     <div class="navbar-collapse collapse">
